Fix Vercel build: remove @types/react-draggable, add local types

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "typescript": "^5.4.5",
-    "vite": "^5.2.0",
-    "@types/react-draggable": "^4.4.9"
+    "vite": "^5.2.0"
   }
 }
